Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La lutte pour les droits des femmes dans l'Union Européenne</title>
+    <title>Le club Europe</title>
     <link rel="stylesheet" href="styles/map.css">
 </head>
 <body>
-    <h1>La lutte pour les droits des femmes dans l'Union Européenne</h1>
+    <h1>54 Européennes remarquables d'hier et d'aujourd'hui</h1>
     <p>carte interactive : cliquez sur chaque pays pour en connaitre deux femmes remarquables.</p>
     <div id="carte-container">
         <svg xmlns="http://www.w3.org/2000/svg" baseprofile="tiny" fill="#ececec" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width=".9" version="1.2" id="carte">
