Refactor HTML structure and enhance CSS styles for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le club Europe</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Le club Europe</title>
+    <link rel="icon" type="image/png" href="img.png">
     <link rel="stylesheet" href="styles/map.css">
 </head>
 <body>
     <h1>54 Européennes remarquables d'hier et d'aujourd'hui</h1>
     <p>carte interactive : cliquez sur chaque pays pour en connaitre deux femmes remarquables.</p>
     <div id="carte-container">
-        <svg xmlns="http://www.w3.org/2000/svg" baseprofile="tiny" fill="#ececec" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width=".9" version="1.2" id="carte">
+    <svg xmlns="http://www.w3.org/2000/svg" baseprofile="tiny" fill="#ececec" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width=".9" version="1.2" id="carte" viewBox="0 0 1100 800" width="100%" height="100%">
             <defs>
                 <pattern id="stripedPattern" patternUnits="userSpaceOnUse" width="10" height="10">
                     <rect width="10" height="10" fill="aliceblue" />
@@ -140,5 +140,6 @@
     <p>résultats de l'indice d'égalité des genres en 2025</p>
     <p>indice basé sur plusieurs indicateurs : niveau d'éducation, participation au marché du travail, ressources financières, santé et violence.</p>
     <p>source: institut européene pour l'égalité entre les hommes et les femmes</p>
+    <h6 style="text-align: center;">créé par Samuel Legrand, en classe de 1CIEL, 2025</h6>
 </footer>
 </html>
