Fix footer HTML structure and enhance CSS styles for improved visual consistency

--- a/index.html
+++ b/index.html
@@ -141,6 +141,6 @@
     <p>résultats de l'indice d'égalité des genres en 2025</p>
     <p>indice basé sur plusieurs indicateurs : niveau d'éducation, participation au marché du travail, ressources financières, santé et violence.</p>
     <p>source: institut européene pour l'égalité entre les hommes et les femmes</p>
-    <h6 style="text-align: center;">créé par Samuel Legrand, en classe de 1CIEL, 2025</h6>
+    <h6> style="text-align: center;">créé par Samuel Legrand, en classe de 1CIEL, 2025</h6>
 </footer>
 </html>
